Fix alignment of sent message

--- a/style.css
+++ b/style.css
@@ -454,4 +454,5 @@ nav .fa-solid {
   color: #61b752;
   margin-top: -40px;
   display: block;
+  text-align: center;
 }
